Include compound tags in the userlog report

--- a/app/userlogs/userlog-reports.html
+++ b/app/userlogs/userlog-reports.html
@@ -101,7 +101,7 @@
                 <span style="width: 125px">Start</span>
                 <span style="width: 125px">End</span>
                 <span flex>Content</span>
-                <span style="margin-right: 32px">Tags</span>
+                <span style="margin-right: 74px">Tags</span>
             </div>
             <div ng-repeat="userlog in vm.filteredReportUserlogs = (vm.reportUserlogs | regexSearch:vm.userLogsFields:vm.searchInputText | filter:vm.filterByTag) track by $index" ng-click="vm.editUserLog(userlog, $event)" class="user-log-row">
                 <div layout="row" layout-align="start center" style="position: relative; border-top: 1px solid #d7d7d7" title="{{userlog.content}}">
@@ -121,6 +121,11 @@
                     <span style="min-width: 24px; margin-left: 8px; font-size: 12px">
                         <span ng-show="userlog.attachment_count>0">({{userlog.attachment_count}}
                         <span class="fa fa-paperclip"></span>)
+                        </span>
+                    </span>
+                    <span style="min-width: 24px; margin-left: 8px; font-size: 12px">
+                        <span ng-show="userlog.compound_tags.length>0">({{userlog.compound_tags.length}}
+                        <span class="fa fa-tags"></span>)
                         </span>
                     </span>
                 </div>
