--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -106,4 +106,15 @@
         <span>Windstow Active: <b>{{vm.receptors[vm.receptorHoverName].windstow_active.value}}</b></span>
         <span>Subarray: <b>{{vm.receptors[vm.receptorHoverName].sub_nr}}</b></span>
     </div>
+    <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true" ng-class="{'transparent-legend':transparentLegend && !showLegend}">
+        <md-button style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend" ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true" class="md-primary md-raised md-icon-button">
+            <span md-theme="white" class="fa fa-eye" ng-show="showLegend" title="Show Legend"></span>
+            <span md-theme="white" class="fa fa-eye-slash" ng-show="!showLegend" title="Hide Legend"></span>
+        </md-button>
+        <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
+            <div layout="row" layout-align="start center">
+                <div class="receptor-requested-target-element"></div><span>Requested Position</span></div>
+            <div layout="row" layout-align="start center">
+                <div class="circle-receptor" ></div><span>Actual Position</span></div>
+        </div>
 </div>
