Addressing PR comments. Aligning text on the legend and reducing opacity of receptors centered at the same point

--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -116,5 +116,11 @@
                 <div class="receptor-requested-target-element"></div><span>Requested Position</span></div>
             <div layout="row" layout-align="start center">
                 <div class="circle-receptor" ></div><span>Actual Position</span></div>
+            <div layout="row" layout-align="start center">
+                        <div class="subarrayColor-sub_nr-1"></div><span>Receptor/s on Sub #1</span></div>
+            <div layout="row" layout-align="start center">
+                    <div class="subarrayColor-sub_nr-3"></div><span>Receptor/s on Sub #3</span></div>
+            <div layout="row" layout-align="start center">
+                    <div class="subarrayColor-sub_nr-7"></div><span>Receptor/s on Sub #7</span></div>
         </div>
-</div>
+    </div>
