--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -49,8 +49,7 @@
         </md-button>
     </div>
 
-    <div ng-show="!vm.childStateShowing && vm.subarrays.length > 0" layout="column" layout-align="center center"
-         style="margin: 0 8px">
+    <div ng-show="!vm.childStateShowing && vm.subarrays.length > 0" layout="column" layout-align="none center">
         <div style="padding: 8px">
             <div ng-repeat="subarray in vm.subarrays | orderBy:'id' track by $index" layout="column" layout-align="start center"
                  class="md-whiteframe-z1" style="margin: 12px 0;" md-theme="{{themePrimaryButtons}}">
