--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -1,7 +1,7 @@
 <div flex layout="row" style="min-width: 1150px; min-height: 650px; padding: 0 8px 8px 8px" ng-controller="SubArrayObservationsDetail as vm">
-    <div layout="column" style="width: 70%;">
+    <div layout="column" style="width: 70%;" id='left-resize'>
 
-      <div layout="row" id='test1' style="height: calc(30% - 5px);">
+      <div layout="row" id='top-resize' style="height: calc(70% - 2px);">
         <div flex layout="column">
             <md-toolbar md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}"
                 ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" class="md-whiteframe-z2" layout="row"
@@ -52,9 +52,9 @@
         </div>
       </div>
 
-      <hr resizeabledivs="#test1--#test2" style="cursor: ns-resize; width: 100%; border-top: 5px solid #eeeeee; opacity: 0; margin: 0;">
+      <hr resizeabledivs="#top-resize--#bottom-resize" style="cursor: ns-resize; width: 100%; border-top: 5px solid #eeeeee; opacity: 0; margin: 0;">
 
-      <div layout="row"  id='test2' style="height: calc(70% - 2px);">
+      <div layout="row"  id='bottom-resize' style="height: calc(30% - 2px);">
         <div style="margin-top: 8px; width: 100%;" layout="column" layout-align="start stretch">
             <md-toolbar class="panel-toolbar md-whiteframe-z1" style="min-height: 64px; max-height: 64px" layout="row"
                 layout-align="start center">
@@ -138,7 +138,10 @@
       </div>
     </div>
 
-    <div layout="column" style="margin-left: 8px; width: 30%;" layout-align="start stretch">
+    <hr resizeabledivs="#left-resize||#right-resize" style="cursor: ew-resize; height: 100%; border-right: 5px solid #eeeeee; opacity: 0; margin: 0 0 0 2px;">
+
+
+    <div layout="column" style="margin-left: 2px; width: 30%;" layout-align="start stretch" id='right-resize'>
         <md-toolbar style="max-height: 35px; min-height: 35px" class="md-whiteframe-z1" layout="column"
             layout-align="center start">
             <span style="margin-left: 8px">Resources</span>
