--- a/app/health/skarab-health/skarab-health.html
+++ b/app/health/skarab-health/skarab-health.html
@@ -24,10 +24,15 @@
     <div ng-repeat="antenna in vm.testdata1" class='test-antenna'>
       <h4>{{antenna.name}}</h4>
       <div class="circleBase type3 nominal-child"></div>
-      <div class="circleBase type3 nominal-child"></div>
     </div>
+
+    <div>
+      <div ng-repeat="antenna in vm.testdata2" class="circleBase type3 nominal-child"></div>
+    </div>
+
   </div>
 
+<!--
   <div style='background-color: rgb(255, 127, 14); margin-bottom: 10px; margin-left: 10px;'>
     <h3 style='margin-left: 20px;'>Subarray 2</h3>
     <div ng-repeat="antenna in vm.testdata2" class='test-antenna'>
@@ -36,7 +41,7 @@
       <div class="circleBase type3 nominal-child"></div>
     </div>
   </div>
-<!--
+
   <div style='background-color: rgb(174, 199, 232); margin-bottom: 10px; margin-left: 10px;'>
     <h3 style='margin-left: 20px;'>Subarray 3</h3>
     <div ng-repeat="antenna in vm.testdata1" class='test-antenna'>
