MT-327: Enable user to select min elevation on main plot

--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -34,6 +34,17 @@
                     <span>Show Gridlines</span>
                 </md-checkbox>
             </md-menu-item>
+            <md-menu-item>
+              <md-tooltip>Minimium Elevation AngleAngle</md-tooltip>
+              <section class="example-section" style='padding-left: 0;'>
+                <md-radio-group ng-model="vm.selectedMinElevation" ng-change="vm.redraw(false)"
+                  layout="row" layout-align="space-between start">
+                  <md-radio-button ng-value="angle" ng-repeat="angle in vm.elevationOptions" class="md-primary">
+                    {{angle}}
+                  </md-radio-button>
+                </md-radio-group>
+              </section>
+            </md-menu-item>
         </md-menu-content>
     </md-menu>
 
