Add deg symbol to elevvation options.

--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -40,7 +40,7 @@
                 <md-radio-group ng-model="vm.selectedMinElevation" ng-change="vm.redraw(false)"
                   layout="row" layout-align="space-between start">
                   <md-radio-button ng-value="angle" ng-repeat="angle in vm.elevationOptions" class="md-primary">
-                    {{angle}}
+                    {{angle}}&#176;
                   </md-radio-button>
                 </md-radio-group>
               </section>
