--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -95,7 +95,7 @@
                                     ng-click="parent.vm.removeSBFromAnyPB(item)" title="Remove Schedule block from any Program Block">Remove SB From PB</md-button>
                             </md-menu-item>
                             <md-menu-item>
-                                <md-button ng-click="parent.vm.addUserLog($event)" title="Add user log">
+                                <md-button ng-click="parent.vm.addUserLog($event, item)" title="Add user log">
                                     <span style="margin-right: 4px"></span>
                                     <span>Add User Log...</span>
                                 </md-button>
