Creating the "executeDryRun" button
Under "SB APPROVED", added an option to execute the dryrun for an
unassigned schedule block.

[MT-530](https://skaafrica.atlassian.net/browse/MT-530)

--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -77,6 +77,9 @@
                                 <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="vm.editInstructionSet(item, $event)">Edit Instruction Set</md-button>
                             </md-menu-item>
                             <md-menu-item>
+                                <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="vm.executeDryRun(item)">Execute Dryrun</md-button>
+                            </md-menu-item>
+                            <md-menu-item>
                                 <md-button ng-disabled="item.type !== 'OBSERVATION'" ng-click="vm.viewSBTasklog(item)">View Dryrun</md-button>
                             </md-menu-item>
                             <md-menu-divider></md-menu-divider>
