--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -36,7 +36,9 @@
             </md-toolbar>
             <div ng-click="showDatePicker = false" flex id="scheduleDraftDataRepeat" style="overflow: auto">
                 <div ng-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy:vm.draftsOrderBy.reverse) track by item.id"
-                    layout="row" ng-click="vm.setSelectedScheduleDraft(item)" ng-class="{'selected-schedule-row md-whiteframe-z3': item === vm.selectedScheduleDraft}"
+                    layout="row" ng-click="vm.setSelectedScheduleDraft(item)"
+                    ng-class="{'selected-schedule-row md-whiteframe-z3': item === vm.selectedScheduleDraft}"
+                    ng-style="{'background-color': '{{vm.getSubArrayColor(item.sub_nr)}}'}"
                     class="schedule-draft-item" layout-align="start center" style="padding: 0 4px">
                     <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
                         md-mode="indeterminate" style="position: absolute; left: 0; right: 0;">
@@ -76,7 +78,7 @@
                             <md-menu-item>
                                 <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="vm.editInstructionSet(item, $event)">Edit Instruction Set</md-button>
                             </md-menu-item>
-                            <md-menu-item>
+                            <md-menu-item ng-if="!item.sub_nr">
                                 <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="vm.executeDryRun(item)">Execute Dryrun</md-button>
                             </md-menu-item>
                             <md-menu-item>
