changing  to  on the gui

--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -28,7 +28,7 @@
                         style="margin-right: 4px;"></span>
                     </span>
                     <span style="width: 137px" class="subheader-text">Verification State</span>
-                    <span style="width: 137px" class="subheader-text">sub_nr</span>
+                    <span style="width: 137px" class="subheader-text">Subarray</span>
                     <span style="width: 162px" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
                         <span>Desired Time</span>
                     <span class="fa" ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
