--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <script data-remove="exclude">
         //backwards compatibility to allow for linking with the old #/ in the url
         // with html5 mode the angular hashbang is removed
@@ -18,6 +19,8 @@
 </head>
 
 <body ng-controller="ApplicationCtrl as vm" md-theme="{{themePrimary}}" md-theme-watch="true" layout="row" ng-cloak>
+
+
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
