--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,4 +1,4 @@
-<div flex layout="column" style="min-width: 1270px; min-height: 600px" class="unselectable sensoClass resource-sensor-status-item" ng-controller="SubArrayResourcesCtrl as vm"
+<div flex layout="column" style="min-width: 1270px; min-height: 600px" class="unselectable" ng-controller="SubArrayResourcesCtrl as vm"
     ng-mouseup="vm.dragSelect = false">
     <div flex layout="row">
         <div flex layout="column" style="padding: 0 8px">
